<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="onBoardingViewModel"
            type="com.example.avazassignment.viewmodel.OnBoardingViewModel" />

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            tools:context=".view.activities.OnBoardingActivity">

            <TextView
                android:id="@+id/tv_tell_us_about"
                android:text="@string/tell_us_about_yourself"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingStart="19dp"
                style="@style/title_style" />

            <TextView
                android:id="@+id/tv_what_you_like_eat"
                android:text="@string/what_do_u_like_to_eat"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:paddingStart="19dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_tell_us_about"
                style="@style/sub_title_style" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/food_item_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="19dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_what_you_like_eat"
                tools:itemCount="10"
                tools:listitem="@layout/list_item_food" />

            <TextView
                android:id="@+id/or_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/actor_regular"
                android:text="@string/or"
                android:textColor="@color/dark_text_color"
                android:textFontWeight="400"
                android:textSize="22sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/food_item_recyclerview" />

            <TextView
                android:id="@+id/add_own_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/actor_regular"
                android:text="@string/add_your_own"
                android:textColor="@color/light_text_color"
                android:textFontWeight="400"
                android:textSize="27sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/or_tv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_food_item_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:paddingStart="19dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_own_tv"
                tools:itemCount="10"
                tools:listitem="@layout/list_item_food" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="19dp"
                android:background="@drawable/ic_continue_btn_bg"
                android:fontFamily="@font/actor_regular"
                android:gravity="center"
                android:text="@string/continue_text"
                android:textColor="@color/white"
                android:textFontWeight="400"
                android:textSize="24sp"
                android:onClick="@{()->onBoardingViewModel.onContinueButtonClick()}"
                android:layout_marginStart="19dp"
                app:layout_constraintTop_toBottomOf="@id/my_food_item_recyclerview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>